--- a/src/sccs/style.scss
+++ b/src/sccs/style.scss
@@ -5,7 +5,9 @@
 //$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap/scss/bootstrap';
 
+@import 'base/general';
 @import 'base/header';
 @import 'base/body';
+@import 'base/footer';
 
 @import 'pages/users-list';
