--- a/src/sccs/base/_general.scss
+++ b/src/sccs/base/_general.scss
@@ -3,3 +3,10 @@
   flex-direction: column;
   height: 100vh;
 }
+.border-box {
+  padding: 25px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #eee;
+  margin: 25px 0;
+}
