Adds snack bar alert for select user action.

--- a/src/sccs/style.scss
+++ b/src/sccs/style.scss
@@ -10,5 +10,7 @@
 @import 'base/body';
 @import 'base/footer';
 
+@import "modules/snack-bar";
+
 @import 'pages/users-list';
 @import 'pages/user-details';
